# ProjectVanguard

./: CMakeLists.txt  README.md  package.xml
config/: explore.yaml  nav2_params.yaml
launch/: explore.launch.py  nav2.launch.py  rover.launch.py  slam.launch.py
rover/launch/: rover.launch.py
rviz/: rover.rviz
urdf/: rover.xacro
worlds/: rover.world
